--- a/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
+++ b/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.IO.Compression" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Token.cs" />
+    <Compile Include="Models\RedisStuct.cs" />
     <Compile Include="Models\TokenType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\AsyncHelper.cs" />
