downgrade the .net version to .net 4.6 for compatibility, along with nuget packages. optimize async calling by waiting all.

--- a/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.nuspec
+++ b/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.nuspec
@@ -8,7 +8,7 @@
     <owners>Ali Bazzi</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>RC</releaseNotes>
+    <releaseNotes>RTM</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>IdentityServer IdentityServer3 Redis Store</tags>
   </metadata>
