--- a/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
+++ b/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Serialization\ScopeConverter.cs" />
     <Compile Include="Stores\AuthorizationCodeStore.cs" />
     <Compile Include="Stores\BaseTokenStore.cs" />
+    <Compile Include="Stores\IRedisKeyFactory.cs" />
+    <Compile Include="Stores\RedisKeyFactory.cs" />
     <Compile Include="Stores\RefreshTokenStore.cs" />
     <Compile Include="Stores\TokenHandleStore.cs" />
   </ItemGroup>
