add option to add prefix to Redis keys, to avoid conflicts if the db instance is shared.

--- a/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
+++ b/IdentityServer3.Contrib.RedisStore/IdentityServer3.Contrib.RedisStore.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Serialization\ScopeConverter.cs" />
     <Compile Include="Stores\AuthorizationCodeStore.cs" />
     <Compile Include="Stores\BaseTokenStore.cs" />
+    <Compile Include="Stores\RedisKeyGenerator.cs" />
     <Compile Include="Stores\RefreshTokenStore.cs" />
     <Compile Include="Stores\TokenHandleStore.cs" />
   </ItemGroup>
