--- a/IdentityServer3.Contrib.RedisStore/packages.config
+++ b/IdentityServer3.Contrib.RedisStore/packages.config
@@ -4,4 +4,5 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
